dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr07.wacc
# type mismatch: char <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  c = 1
end
